<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hu.bme.aut.plantdroid.ui.plants.PlantsFragment"
        android:label="@string/title_plants"
        tools:layout="@layout/fragment_plants" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="hu.bme.aut.plantdroid.ui.sensors.SensorsFragment"
        android:label="@string/title_sensors"
        tools:layout="@layout/fragment_sensors" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="hu.bme.aut.plantdroid.ui.PreferencesFragment"
        android:label="@string/title_preferences" />

</navigation>